--- a/Expedition/Base.lproj/Main.storyboard
+++ b/Expedition/Base.lproj/Main.storyboard
@@ -314,7 +314,7 @@
                                             </connections>
                                         </switch>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jx4-xQ-9or" userLabel="GlyphFade">
-                                            <rect key="frame" x="99" y="641.66666666666663" width="200" height="200"/>
+                                            <rect key="frame" x="149" y="541.66666666666663" width="100" height="100"/>
                                             <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="17"/>
                                             <state key="normal" image="GlyphFadeUI">
                                                 <color key="titleColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -324,7 +324,7 @@
                                             </connections>
                                         </button>
                                         <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="749" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ydw-Ey-JIH" userLabel="Shadow">
-                                            <rect key="frame" x="8" y="641.66666666666663" width="200" height="200"/>
+                                            <rect key="frame" x="8" y="541.66666666666663" width="100" height="100"/>
                                             <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="17"/>
                                             <color key="tintColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <state key="normal" image="ShadowUI">
@@ -335,7 +335,7 @@
                                             </connections>
                                         </button>
                                         <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="751" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WC4-Vs-hNj" userLabel="Light">
-                                            <rect key="frame" x="8" y="459.66666666666674" width="200" height="200"/>
+                                            <rect key="frame" x="8" y="459.66666666666669" width="100" height="100.00000000000006"/>
                                             <rect key="contentStretch" x="0.0" y="0.0" width="0.69999999999999996" height="1"/>
                                             <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="17"/>
                                             <state key="normal" image="LightUI">
@@ -346,7 +346,7 @@
                                             </connections>
                                         </button>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lny-al-JS1" userLabel="FadeBG">
-                                            <rect key="frame" x="190" y="641.66666666666663" width="200" height="200"/>
+                                            <rect key="frame" x="290" y="541.66666666666663" width="100" height="100"/>
                                             <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="17"/>
                                             <state key="normal" image="FadeUI">
                                                 <color key="titleColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -378,7 +378,7 @@
                                             </connections>
                                         </button>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eqT-31-vf2" userLabel="Blue">
-                                            <rect key="frame" x="190" y="459.66666666666674" width="200" height="200"/>
+                                            <rect key="frame" x="290" y="459.66666666666669" width="100" height="100.00000000000006"/>
                                             <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="17"/>
                                             <state key="normal" image="BlueLightUI">
                                                 <color key="titleColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -388,7 +388,7 @@
                                             </connections>
                                         </button>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bzd-j1-tNi" userLabel="Dark">
-                                            <rect key="frame" x="99" y="459.66666666666674" width="200" height="200"/>
+                                            <rect key="frame" x="149" y="459.66666666666669" width="100" height="100.00000000000006"/>
                                             <rect key="contentStretch" x="0.0" y="0.0" width="0.80000000000000004" height="0.80000000000000004"/>
                                             <gestureRecognizers/>
                                             <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="17"/>
@@ -495,13 +495,6 @@
                             <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
-                                <imageView opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.34999999999999998" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="blurrylogoforui.png" translatesAutoresizingMaskIntoConstraints="NO" id="R6c-gu-oCh">
-                                    <rect key="frame" x="-327" y="45" width="787" height="1040"/>
-                                    <constraints>
-                                        <constraint firstAttribute="height" constant="1040" id="hh9-EK-gka"/>
-                                        <constraint firstAttribute="width" constant="787" id="mL2-Hq-kaT"/>
-                                    </constraints>
-                                </imageView>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="how to use" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="W7N-Mg-UZc">
                                     <rect key="frame" x="38" y="28" width="154" height="40"/>
                                     <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="29"/>
@@ -538,20 +531,6 @@
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logoui.png" translatesAutoresizingMaskIntoConstraints="NO" id="EpC-IZ-12f">
-                                    <rect key="frame" x="20" y="692" width="125" height="125"/>
-                                    <constraints>
-                                        <constraint firstAttribute="width" constant="125" id="jbd-Wd-hTn"/>
-                                        <constraint firstAttribute="height" constant="125" id="oI2-Ki-PTk"/>
-                                    </constraints>
-                                </imageView>
-                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MorningLogoDark" translatesAutoresizingMaskIntoConstraints="NO" id="26z-zd-wEY">
-                                    <rect key="frame" x="259" y="692" width="125" height="125"/>
-                                    <constraints>
-                                        <constraint firstAttribute="height" constant="125" id="7m3-Fg-TYe"/>
-                                        <constraint firstAttribute="width" constant="125" id="dL3-90-TCy"/>
-                                    </constraints>
-                                </imageView>
                             </subviews>
                             <constraints>
                                 <constraint firstItem="yFo-uR-ly2" firstAttribute="top" secondItem="Cq2-yv-Z0T" secondAttribute="bottom" constant="6" id="0my-E0-zxx"/>
@@ -559,10 +538,7 @@
                                 <constraint firstItem="uqn-CR-j65" firstAttribute="top" secondItem="W7N-Mg-UZc" secondAttribute="bottom" constant="18" id="6Yk-fH-HGf"/>
                                 <constraint firstItem="W7N-Mg-UZc" firstAttribute="leading" secondItem="j0b-7h-1ZU" secondAttribute="leading" constant="38" id="ANg-5M-s7c"/>
                                 <constraint firstItem="yFo-uR-ly2" firstAttribute="trailing" secondItem="uqn-CR-j65" secondAttribute="trailing" id="H8a-gf-ezd"/>
-                                <constraint firstItem="R6c-gu-oCh" firstAttribute="top" secondItem="j0b-7h-1ZU" secondAttribute="top" constant="45" id="HIK-Qh-uEw"/>
                                 <constraint firstItem="bcr-H7-VYf" firstAttribute="trailing" secondItem="uqn-CR-j65" secondAttribute="trailing" id="O1w-pd-zaK"/>
-                                <constraint firstAttribute="bottom" secondItem="26z-zd-wEY" secondAttribute="bottom" constant="25" id="O64-xn-jN2"/>
-                                <constraint firstItem="EpC-IZ-12f" firstAttribute="leading" secondItem="j0b-7h-1ZU" secondAttribute="leading" constant="20" id="PRh-ci-eNn"/>
                                 <constraint firstItem="bcr-H7-VYf" firstAttribute="leading" secondItem="uqn-CR-j65" secondAttribute="leading" id="Pk3-Zv-BSh"/>
                                 <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="W7N-Mg-UZc" secondAttribute="trailing" constant="20" symbolic="YES" id="Qd3-9n-1Wl"/>
                                 <constraint firstItem="uqn-CR-j65" firstAttribute="leading" secondItem="j0b-7h-1ZU" secondAttribute="leading" constant="28" id="SIE-2e-imQ"/>
@@ -573,11 +549,8 @@
                                 <constraint firstAttribute="trailing" secondItem="uqn-CR-j65" secondAttribute="trailing" constant="28" id="ith-qT-Qxt"/>
                                 <constraint firstItem="XuH-MP-99j" firstAttribute="top" secondItem="yFo-uR-ly2" secondAttribute="bottom" constant="9" id="l4k-4O-jf3"/>
                                 <constraint firstItem="Cq2-yv-Z0T" firstAttribute="trailing" secondItem="uqn-CR-j65" secondAttribute="trailing" id="lK7-jD-M2r"/>
-                                <constraint firstAttribute="bottom" secondItem="EpC-IZ-12f" secondAttribute="bottom" constant="25" id="mqD-H5-dI7"/>
                                 <constraint firstItem="bcr-H7-VYf" firstAttribute="top" secondItem="uqn-CR-j65" secondAttribute="bottom" constant="8" id="pVN-Kq-Vgg"/>
-                                <constraint firstItem="R6c-gu-oCh" firstAttribute="leading" secondItem="j0b-7h-1ZU" secondAttribute="leading" constant="-327" id="rcF-FV-FCy"/>
                                 <constraint firstItem="Cq2-yv-Z0T" firstAttribute="top" secondItem="bcr-H7-VYf" secondAttribute="bottom" constant="6" id="tU9-IB-xO0"/>
-                                <constraint firstAttribute="trailing" secondItem="26z-zd-wEY" secondAttribute="trailing" constant="30" id="yhB-B0-kt6"/>
                             </constraints>
                         </view>
                         <color key="backgroundColor" name="Expedition White"/>
@@ -654,10 +627,7 @@
         <image name="FadeUI" width="100" height="100"/>
         <image name="GlyphFadeUI" width="100" height="100"/>
         <image name="LightUI" width="100" height="100"/>
-        <image name="MorningLogoDark" width="124.33333587646484" height="124.33333587646484"/>
         <image name="ShadowUI" width="100" height="100"/>
-        <image name="blurrylogoforui.png" width="1024" height="1024"/>
-        <image name="logoui.png" width="1024" height="1024"/>
         <namedColor name="Expedition Blue">
             <color red="0.0" green="0.6119999885559082" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
