--- a/Expedition/Base.lproj/Main.storyboard
+++ b/Expedition/Base.lproj/Main.storyboard
@@ -691,7 +691,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="A7N-vK-sn6"/>
+        <segue reference="Sog-fL-QSg"/>
         <segue reference="dyC-su-jYw"/>
         <segue reference="tOY-Um-AMB"/>
     </inferredMetricsTieBreakers>
